--- a/gb/22/3/18/n13656261.md
+++ b/gb/22/3/18/n13656261.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vfkyrj397/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vfkyrj397/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vfkyrj397/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大学申请黄金周六为5/21 台招联会：撞期可协调</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2022年03月18日讯】（大纪元记者林紫馨台湾台北报导）台111学年度<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a><ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E7%94%B3%E8%AF%B7%E5%85%A5%E5%AD%A6.md#1">申请入学</a>将于3月底受理报名，大学招生委员会联合会18日指出，今年有69所大学院校、2,195个学系参加申请入学选才，“黄金周六”落在5月21日，有169个系组只在这一天办理<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E7%94%84%E8%AF%95.md#1">甄试</a>，考生若撞期可与校系协调。</p>
-<p>招联会表示，111学年度<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>申请将于3月24、25日受理报名，31日公告第一阶段筛选结果。通过一阶筛选的考生须于5月19日至6月5日期间参与大学校系自办的第二阶段指定项目<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E7%94%84%E8%AF%95.md#1">甄试</a>。<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E7%94%B3%E8%AF%B7%E5%85%A5%E5%AD%A6.md#1">申请入学</a>第一阶段筛选结果发布后，第二阶段大学端盼看到学生的多元表现，招联会提醒，学生可善用大考中心公布的不同科目组合级分人数百分比累计表，并评估自身兴趣、能力、性向来选填志愿。</p>
+<p>【大纪元2022年03月18日讯】（大纪元记者林紫馨台湾台北报导）台111学年度<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%B3%E8%AF%B7%E5%85%A5%E5%AD%A6.md#1">申请入学</a>将于3月底受理报名，大学招生委员会联合会18日指出，今年有69所大学院校、2,195个学系参加申请入学选才，“黄金周六”落在5月21日，有169个系组只在这一天办理<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%84%E8%AF%95.md#1">甄试</a>，考生若撞期可与校系协调。</p>
+<p>招联会表示，111学年度<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>申请将于3月24、25日受理报名，31日公告第一阶段筛选结果。通过一阶筛选的考生须于5月19日至6月5日期间参与大学校系自办的第二阶段指定项目<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%84%E8%AF%95.md#1">甄试</a>。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%B3%E8%AF%B7%E5%85%A5%E5%AD%A6.md#1">申请入学</a>第一阶段筛选结果发布后，第二阶段大学端盼看到学生的多元表现，招联会提醒，学生可善用大考中心公布的不同科目组合级分人数百分比累计表，并评估自身兴趣、能力、性向来选填志愿。</p>
 <p>若第一阶段有同级分超额筛选情形，招联会指出，除了以“采计科目级分总和”再筛一次外，2020年新增使用“分科筛选”，并有些校系“增加参采科目”，已经能有效减少超筛。</p>
 <p>招联会统计，111学年度申请入学使用三科学测考科的校系最多，有931个校系；最多校系使用的科目组合是国文、英文、数A、自然4科，有360个校系使用。对照繁星推荐，也是使用三科学测考科最多，有832个校系，最多校系使用的科目组合是国文、英文、社会。</p>
 <p>招联会指出，今年有69所大学院校、2,195个学系参加申请入学选才，“黄金周六”落在5月21日，有169个系组只在这一天办理甄试。招联会表示，从107学年度开始，各系都提供弹性分流机制，至少会规划上、下午场两个以上时段，方便考生应考。学生通过一阶筛选后，若有撞期问题可与学系联系协调。◇</p>
@@ -16,57 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/7/30/n13126868.md#1">台达电10企业获准租购土地 预计投资80亿</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/12/30/n13468375.md#1">长庚大学资工系毕展 聚焦人工智慧疫后日常</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/12/31/n13472067.md#1">值得关注亚洲企业 日媒点名鸿海、台达电</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/1/14/n13504822.md#1">全台第一座元宇宙XR研发中心 北科大打造育才基地</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/1/14/n13505158.md#1">中企撒2亿新竹私设研发中心 挖台人才</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/2/24/n13601445.md#1">元智与亚医结合人工智慧 开发鼾声健康侦测器</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/5/n13623346.md#1">442家企业向新鲜人招手 台大校园征才5日登场</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/13/n13643299.md#1">台大学繁星推荐释1.6万名额 15日起受理报名</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13656261.md#1">大学申请黄金周六为5/21 台招联会：撞期可协调</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13656253.md#1">因疫疏忽牙齿保健 牙周病增加 确诊死亡率高8倍</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/10/16/n12479610.md#1">嘉义林管处举办110年约雇森林护管员甄试</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/5/21/n12965168.md#1">大学申请入学分发 大叶大学分发率逾94％</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/5/27/n12979770.md#1">技专第二阶段甄试 报名费降为500元</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/9/27/n13264197.md#1">台招联会重申：申请入学管道仍重学习历程档案</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13651314.md#1">【飞天大学学生娱乐作品】后台奇遇</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13652764.md#1">远离战火！东海大学首援乌克兰流亡生</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13653169.md#1">俄乌战火父母逃离基辅 东华大学挺乌籍生</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13653246.md#1">英媒：英国大学或助中共研究超级武器</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13656258.md#1">台大携手台达成立研发中心 培育电动车、AI人才</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13656253.md#1">因疫疏忽牙齿保健 牙周病增加 确诊死亡率高8倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/16/n12479610.md#1">嘉义林管处举办110年约雇森林护管员甄试</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/21/n12965168.md#1">大学申请入学分发 大叶大学分发率逾94％</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/27/n12979770.md#1">技专第二阶段甄试 报名费降为500元</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/27/n13264197.md#1">台招联会重申：申请入学管道仍重学习历程档案</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13651314.md#1">【飞天大学学生娱乐作品】后台奇遇</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/17/n13652764.md#1">远离战火！东海大学首援乌克兰流亡生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/17/n13653169.md#1">俄乌战火父母逃离基辅 东华大学挺乌籍生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/17/n13653246.md#1">英媒：英国大学或助中共研究超级武器</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672956.md#1">外籍师获聘半年 家属可入境台湾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672589.md#1">境外激增122例 国际疫情尚未降温</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241790.md#1" target="_blank">共产暴政录：柬共屠杀300万民众及30万华人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/12/n10556515.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/10/23/n8423584.md#1" target="_blank">屡遭拘禁摧残16年 妇坚修法轮功神奇复原</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/12/10/n13430091.md#1">【百年真相】革命还是暴动？湖南农民运动真相</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/13/n13643964.md#1">【未解之谜】穿越长城 是功能还是魔术？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/10/n13635669.md#1">【人生之钥】遭遇强盗 十五六岁女孩失足落水后的命运</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/5/n13624821.md#1">传统武术讲功夫 新武术是大跃进产物</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654272.md#1">【新闻看点】拜习将再通话 中共开始转向？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654103.md#1">【神韵原创音乐】2019 神韵交响乐《长袖舞唐宫》</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13654466.md#1">【重播】充当中共特务骚扰华人 五人被美国起诉</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13649338.md#1">老坛酸菜制作现场怵目惊心 康师傅股价暴跌</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13651336.md#1">五人在美充当中共特务 美司法部高调起诉</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13649222.md#1">杀害李进进律师的凶嫌  更多背景曝光</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13648824.md#1">邓伦被爆偷漏税遭罚亿元 或牵连杨颖杨幂杨紫</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/15/n13648253.md#1">当红男星邓伦遭罚上亿 社交账号被封 品牌切割</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/15/n13648432.md#1">因性侵案被判赔片方5千万 高云翔前妻也负连责</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/15/n13648637.md#1">香港疑似发生地震 黄秋生讽天文台慢半拍</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654085.md#1">乌克兰阵亡男星遗体寻获 生前留防弹衣给孩童</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/14/n13645167.md#1">洗衣机清洁2诀窍很重要！防霉菌、除异味</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/9/n13634222.md#1">很多人蛋白质吃不足 这样吃才能增肌减脂</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13650461.md#1">【健康1+1】Omicron变种BA.2中国大爆发？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/14/n13645453.md#1">绿茶似疫苗？研究：儿茶素提升防御力、延长寿命</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/2/18/n13586954.md#1">喝牛奶易得一型糖尿病？专家：有办法能预防</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vfkyrj397/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vfkyrj397/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/18/n13656261.htm">大学申请黄金周六为5/21 台招联会：撞期可协调</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/18/n13656261.htm">大学申请黄金周六为5/21 台招联会：撞期可协调</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13656261.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vfkyrj397/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vfkyrj397/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/3/18/n13656261.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
